--- a/timetable.html
+++ b/timetable.html
@@ -4,55 +4,115 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" 
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" 
+            integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" 
+            crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
     <title>Study_Helper</title>
 </head>
 <body>
-    <wrapper>
+    <div class='wrapper'>
         <header>
-            <h1>Study_Helper - лучший помошник в учёбе!</h1>
+            <div class="title">
+                <h1>Study_Helper</h1>
+                <h2>Делу время, потехе час.</h2>
+            </div>
             <nav>
                 <ul class="menu">
                     <ol class="about">
-                        <p class="about_menu-text">О сайте</p>
+                        <a href='about_us.html' class="about_menu-text">О сайте</a>
                     </ol>
-                    <ol class="docx">
-                        <p class="docx_text">Работа с .docx</p>
+                    <ol class="doc">
+                        <a href='doc.html' class="doc_text">Работа с .doc</a>
                     </ol>
                     <ol class="transform">
-                        <p class="transform_text">Перевод в текст</p>
+                        <a href='into_text.html' class="transform_text">Перевод в текст</a>
                     </ol>
                     <ol class="timetable">
-                        <p class="timetable_text">Расписание</p>
+                        <a href='timetable.html' class="timetable_text">Расписание</a>
                     </ol>
                     <ol class="sites">
-                        <p class="sites_text">Сайты</p>
-                    </ol>
-                    <ol class="portfolio">
-                        <p class="portfolio_text">Портфолио</p>
+                        <a href='#' class="sites_text">Сайты</a>
                     </ol>
                     <ol class="settings">
-                        <p class="settings_text">Настройки</p>
+                        <a href='settings.html' class="settings_text">Настройки</a>
                     </ol>
                 </ul>
             </nav>
         </header>
         <content>
-            <div class="content_timetable"></div>
+            <div class="content_timetable">
+                <h1>Расписание</h1>
+                <a href=""><img src="img/save-icon.png" alt="Иконка сохранения" class="timetable_save"></a>
+                <a href=""><img src="img/left.png" alt="Стрелка налево" class="timetable_right"></a>
+                <a href=""><img src="img/right.png" alt="Стрелка направо" class="timetable_left"></a>
+                <hr>
+                <h3>Месяц Число</h3>
+                <p class="error">Неверно записаны данные. Внимательно прочитайте инструкцию.</p>
+                <p class="complete">Данные успешно сохранены</p>
+                <div class="timetable_main">
+                    <div class="timetable_week">
+                        <p>ПН</p><p>ВТ</p><p>СР</p><p>ЧТ</p>
+                        <p>ПТ</p><p>СБ</p><p>ВС</p>
+                    </div>
+                    <div class="timetable_number">
+                        <p>1</p><p>2</p><p>3</p><p>4</p>
+                        <p>5</p><p>6</p><p>7</p>
+                   </div>
+                   <div class="hours">
+                    <p>00</p><hr><p>01</p><hr><p>02</p><hr><p>03</p><hr><p>04</p><hr><p>05</p><hr>
+                    <p>06</p><hr><p>07</p><hr><p>08</p><hr><p>09</p><hr><p>10</p><hr><p>11</p><hr>
+                    <p>12</p><hr><p>13</p><hr><p>14</p><hr><p>15</p><hr><p>16</p><hr><p>17</p><hr>
+                    <p>18</p><hr><p>19</p><hr><p>20</p><hr><p>21</p><hr><p>22</p><hr><p>23</p><hr>
+                   </div>
+                   <div class="vertical_line"></div>
+                   <div class="vertical_line"></div>
+                   <div class="vertical_line"></div>
+                   <div class="vertical_line"></div>
+                   <div class="vertical_line"></div>
+                   <div class="vertical_line"></div>
+                   <div class="vertical_line"></div>
+                   <div class="vertical_line"></div>
+                </div>
+                <div class="timetable_writing">
+                    <textarea name="" id=""></textarea>
+                    <p><b>Инструкция</b></p><br>
+                    <p>Указанные ниже команды необходимо разделять пробелом, 
+                        писать их можно в любом порядке.</p><br>
+                    <p>ПН - На понедельник</p>
+                    <p>ВТ - На вторник</p>
+                    <p>СР - На среду</p>
+                    <p>ЧТ - На четверг</p>
+                    <p>ПТ - На пятницу</p>
+                    <p>СБ - На субботу</p>
+                    <p>ВС - На воскресенье</p><br>
+                    <p>повтор - повторять каждую неделю</p>
+                    <p>[] - здесь будет отображена ваша задача</p>
+                    <p>; - конец задачи</p>
+                    <p>цвет:синий - блок задачи будет синего цвета</p>
+                    <p>12.01 - число.месяц</p>
+                    <p>01:20 - час:минута (необходимо, чтобы минуты оканчивались либо на 0, либо на 5)</p>
+                </div>
+            </div>
         </content>
         <footer>
+            <div class="telephone">
+                <p>Телефон</p>
+                <a href="tel:">+7-923-666-23-45</a>
+            </div>
             <div class="contacts">
                 <p class="contacts_text">Контакты</p>
-                <a href="" class="logo1"><img src="" alt="логотип WhatsApp"></a>
-                <a href="" class="logo2"><img src="" alt="логотип ВК"></a>
-                <a href="" class="logo3"><img src="" alt="логотип Viber"></a>
-                <a href="" class="logo4"><img src="" alt="логотип Telegram"></a>
-                <a href="" class="logo5"><img src="" alt="логотип Discord"></a>
+                <a href="https://web.whatsapp.com/" class="logo1"><img src="img/whatsap-icon.png" alt="рисунок WhatsApp"></a>
+                <a href="https://vk.com" class="logo2"><img src="img/vk-icon.png" alt="рисунок VK"></a>
+                <a href="https://www.viber.com/" class="logo3"><img src="img/viber-icon.png" alt="рисунок Viber"></a>
+                <a href="https://web.telegram.org/k/" class="logo4"><img src="img/telegram-icon.png" alt="рисунок Telegram"></a>
+                <a href="https://discord.com/" class="logo5"><img src="img/discord-icon.png" alt="рисунок Discord"></a>
             </div>
             <div class="year">
                 <p class="year_text">Study_Helper - 2023</p>
             </div>
         </footer>
-    </wrapper>
+    </div>
 </body>
 </html>
