--- a/about_us.html
+++ b/about_us.html
@@ -21,7 +21,7 @@
             <nav>
                 <ul class="menu">
                     <ol class="about">
-                        <a href='about_us.html' class="about_menu-text">О сайте</a>
+                        <a href='#' class="about_menu-text">О сайте</a>
                     </ol>
                     <ol class="doc">
                         <a href='doc.html' class="doc_text">Работа с .doc</a>
@@ -32,8 +32,28 @@
                     <ol class="timetable">
                         <a href='timetable.html' class="timetable_text">Расписание</a>
                     </ol>
+                    <ol>
+                        <a href="recom.html" class="recom_text">Советы</a>
+                    </ol>
                     <ol class="sites">
                         <a href='#' class="sites_text">Сайты</a>
+                        <ul>
+                            <ol>
+                                <a href="https://vpr.sdamgia.ru/">Решу ВПР</a>
+                            </ol>
+                            <ol>
+                                <a href="https://oge.sdamgia.ru/">Решу ОГЭ</a>
+                            </ol>
+                            <ol>
+                                <a href="https://ege.sdamgia.ru/">Решу ЕГЭ</a>
+                            </ol>
+                            <ol>
+                                <a href="https://obrazovaka.ru/books">Краткое содержание</a>
+                            </ol>
+                            <ol>
+                                <a href="https://biouroki.ru/workshop/crossgen.html">Кроссворд</a>
+                            </ol>
+                        </ul>
                     </ol>
                     <ol class="settings">
                         <a href='settings.html' class="settings_text">Настройки</a>
@@ -55,32 +75,31 @@
                 <ul>
                     <li>Работа с файлами - автоматическая запись текста
                         из сайтов в документы .docx и .pptx; 
-                        <br></li>
-                        <img src="img/auto-icon.png" width="200" alt="">
+                        <img src="img/auto-icon.png" alt="автоматизация"></li>
                     <li>Советы и рекомендации - сборник полезных советов 
                         для улучшения жизни; 
-                        <br></li>
-                        <img src="img/book-icon.png" width="200" alt="">
+                        <img src="img/book-icon.png" alt="сборник советов"></li>
                     <li>Инструменты планирования - календари и планировщики, 
                         помогающие организовать учебу; 
-                        <br></li>
-                        <img src="img/timetable-icon.png" width="200" alt="">
+                        <img src="img/timetable-icon.png" alt="календарь"></li>
                     <li>и многое другое!</li>
                 </ul>
             </div>
         </content>
         <footer>
-            <div class="telephone">
-                <p>Телефон</p>
-                <a href="tel:">+7-923-666-23-45</a>
-            </div>
-            <div class="contacts">
-                <p class="contacts_text">Контакты</p>
-                <a href="https://web.whatsapp.com/" class="logo1"><img src="img/whatsap-icon.png" alt="рисунок WhatsApp"></a>
-                <a href="https://vk.com" class="logo2"><img src="img/vk-icon.png" alt="рисунок VK"></a>
-                <a href="https://www.viber.com/" class="logo3"><img src="img/viber-icon.png" alt="рисунок Viber"></a>
-                <a href="https://web.telegram.org/k/" class="logo4"><img src="img/telegram-icon.png" alt="рисунок Telegram"></a>
-                <a href="https://discord.com/" class="logo5"><img src="img/discord-icon.png" alt="рисунок Discord"></a>
+            <div class="call_me">
+                <div class="telephone">
+                    <p>Телефон</p>
+                    <a href="tel:">+7-923-666-23-45</a>
+                </div>
+                <div class="contacts">
+                    <p class="contacts_text">Контакты</p>
+                    <a href="https://web.whatsapp.com/" class="logo1"><img src="img/whatsap-icon.png" alt="рисунок WhatsApp"></a>
+                    <a href="https://vk.com" class="logo2"><img src="img/vk-icon.png" alt="рисунок VK"></a>
+                    <a href="https://www.viber.com/" class="logo3"><img src="img/viber-icon.png" alt="рисунок Viber"></a>
+                    <a href="https://web.telegram.org/k/" class="logo4"><img src="img/telegram-icon.png" alt="рисунок Telegram"></a>
+                    <a href="https://discord.com/" class="logo5"><img src="img/discord-icon.png" alt="рисунок Discord"></a>
+                </div>
             </div>
             <div class="year">
                 <p class="year_text">Study_Helper - 2023</p>
