--- a/doc.html
+++ b/doc.html
@@ -24,7 +24,7 @@
                         <a href='about_us.html' class="about_menu-text">О сайте</a>
                     </ol>
                     <ol class="doc">
-                        <a href='doc.html' class="doc_text">Работа с .doc</a>
+                        <a href='#' class="doc_text">Работа с .doc</a>
                     </ol>
                     <ol class="transform">
                         <a href='into_text.html' class="transform_text">Перевод в текст</a>
@@ -32,8 +32,28 @@
                     <ol class="timetable">
                         <a href='timetable.html' class="timetable_text">Расписание</a>
                     </ol>
+                    <ol>
+                        <a href="recom.html" class="recom_text">Советы</a>
+                    </ol>
                     <ol class="sites">
                         <a href='#' class="sites_text">Сайты</a>
+                        <ul>
+                            <ol>
+                                <a href="https://vpr.sdamgia.ru/">Решу ВПР</a>
+                            </ol>
+                            <ol>
+                                <a href="https://oge.sdamgia.ru/">Решу ОГЭ</a>
+                            </ol>
+                            <ol>
+                                <a href="https://ege.sdamgia.ru/">Решу ЕГЭ</a>
+                            </ol>
+                            <ol>
+                                <a href="https://obrazovaka.ru/books">Краткое содержание</a>
+                            </ol>
+                            <ol>
+                                <a href="https://biouroki.ru/workshop/crossgen.html">Кроссворд</a>
+                            </ol>
+                        </ul>
                     </ol>
                     <ol class="settings">
                         <a href='settings.html' class="settings_text">Настройки</a>
@@ -42,18 +62,21 @@
             </nav>
         </header>
         <content>
-            <div class="content_about">
+            <div class="content_doc">
                 <h3>Работа с документами</h3>
                 <p>Введите запрос</p>
                 <input type="text">
                 <button>Поиск</button>
-                <p>Введите название Word документа ,tp .docx</p>
+                <p>Введите название Word документа без .docx</p>
                 <input type="text">
-                <p>введите ссылки на необходимый сайт через Enter</p>
-                <textarea></textarea>
-                <p>Скаченные файлы вы можете либо соединить вместе, либо переместить весть текст в презентацию</p>
-                <div class="summ"><p>Слияние Word файлов</p></div>
-                <div class="presentation"><p>Создание презентации из текста файла(ов)</p></div>
+                <p>Введите ссылки на необходимый сайт через Enter</p>
+                <textarea></textarea><br>
+                <button>Начать</button>
+                <p>Скаченные файлы вы можете либо соединить вместе, либо переместить весь текст в презентацию</p>
+                <div class="drag_drop">
+                    <div class="summ"><p>Слияние Word файлов</p></div>
+                    <div class="presentation"><p>Создание презентации из текста файла(ов)</p></div>
+                </div>
             </div>
         </content>
         <footer>
