--- a/timetable.html
+++ b/timetable.html
@@ -30,10 +30,30 @@
                         <a href='into_text.html' class="transform_text">Перевод в текст</a>
                     </ol>
                     <ol class="timetable">
-                        <a href='timetable.html' class="timetable_text">Расписание</a>
+                        <a href='#' class="timetable_text">Расписание</a>
+                    </ol>
+                    <ol>
+                        <a href="recom.html" class="recom_text">Советы</a>
                     </ol>
                     <ol class="sites">
                         <a href='#' class="sites_text">Сайты</a>
+                        <ul>
+                            <ol>
+                                <a href="https://vpr.sdamgia.ru/">Решу ВПР</a>
+                            </ol>
+                            <ol>
+                                <a href="https://oge.sdamgia.ru/">Решу ОГЭ</a>
+                            </ol>
+                            <ol>
+                                <a href="https://ege.sdamgia.ru/">Решу ЕГЭ</a>
+                            </ol>
+                            <ol>
+                                <a href="https://obrazovaka.ru/books">Краткое содержание</a>
+                            </ol>
+                            <ol>
+                                <a href="https://biouroki.ru/workshop/crossgen.html">Кроссворд</a>
+                            </ol>
+                        </ul>
                     </ol>
                     <ol class="settings">
                         <a href='settings.html' class="settings_text">Настройки</a>
