--- a/settings.html
+++ b/settings.html
@@ -63,6 +63,40 @@
         </header>
         <content>
             <div class="content_settings">
+                <div class="settings_theme">
+
+                    <p>Тема: </p>
+                    <div class="theme">
+                        <button class="dark"><div></div></button>
+                        <button class="light"><div></div></button>
+                    </div>
+
+                    <p>Цвет: </p>
+                    <div class="colors">
+                        <button class="green">
+                            <div class="green_color"></div></button>
+                        <button class="blue">
+                            <div class="blue_color"></div></button>
+                        <button class="brown">
+                            <div class="brown_color"></div></button>
+                        <button class="grey">
+                            <div class="grey_color"></div></button>
+                        <button class="human">
+                            <div class="human_color"></div></button>
+                        <button class="pink">
+                            <div class="pink_color"></div></button>
+                        <button class="orange">
+                            <div class="orange_color"></div></button>
+                    </div>
+
+                    <p>Оставить отзыв</p>
+                    <textarea name="" id=""></textarea><br>
+                    <button>Отправить</button>
+                    <p class="right">Ваш отзыв успешно отправлен</p>
+
+                    <button>Сменить пароль</button><br>
+                    <button class="quit">Выйти из аккаунта</button>
+                </div>
             </div>
         </content>
         <footer>
