--- a/into_text.html
+++ b/into_text.html
@@ -63,16 +63,20 @@
         </header>
         <content>
             <div class="content_text">
-                <div class="image_area">
-                    <p>Перетащите сюда изображение для вывода текста</p>
+                <div class="text_image">
+                    <div class="image_area">
+                        <p>Перетащите сюда изображение для вывода текста</p>
+                    </div>
+                    <button>Начать</button><br>
+                    <textarea name="" id=""></textarea>
                 </div>
-                <button>Начать</button>
-                <textarea name="" id=""></textarea>
-                <div class="audio_area">
-                    <p>Перетащите сюда аудио для вывода текста</p>
+                <div class="text_audio">
+                    <div class="audio_area">
+                        <p>Перетащите сюда аудио для вывода текста</p>
+                    </div>
+                    <button>Начать</button><br>
+                    <textarea name="" id=""></textarea>
                 </div>
-                <button>Начать</button>
-                <textarea name="" id=""></textarea>
             </div>
         </content>
         <footer>
