--- a/about_us.html
+++ b/about_us.html
@@ -63,6 +63,7 @@
         </header>
         <content>
             <div class="content_about">
+                <h2>О сайте</h2>
                 <p class="about_main-text">
                     <b>Study_Helper</b> - это веб-сайт, 
                     предназначенный для школьников и студентов. 
@@ -75,13 +76,13 @@
                 <ul>
                     <li>Работа с файлами - автоматическая запись текста
                         из сайтов в документы .docx и .pptx; 
-                        <img src="img/auto-icon.png" alt="автоматизация"></li>
+                        <img src="img/light/green/auto-icon.png" alt="автоматизация"></li>
                     <li>Советы и рекомендации - сборник полезных советов 
                         для улучшения жизни; 
-                        <img src="img/book-icon.png" alt="сборник советов"></li>
+                        <img src="img/light/green/book-icon.png" alt="сборник советов"></li>
                     <li>Инструменты планирования - календари и планировщики, 
                         помогающие организовать учебу; 
-                        <img src="img/timetable-icon.png" alt="календарь"></li>
+                        <img src="img/light/green/timetable-icon.png" alt="календарь"></li>
                     <li>и многое другое!</li>
                 </ul>
             </div>
@@ -94,11 +95,16 @@
                 </div>
                 <div class="contacts">
                     <p class="contacts_text">Контакты</p>
-                    <a href="https://web.whatsapp.com/" class="logo1"><img src="img/whatsap-icon.png" alt="рисунок WhatsApp"></a>
-                    <a href="https://vk.com" class="logo2"><img src="img/vk-icon.png" alt="рисунок VK"></a>
-                    <a href="https://www.viber.com/" class="logo3"><img src="img/viber-icon.png" alt="рисунок Viber"></a>
-                    <a href="https://web.telegram.org/k/" class="logo4"><img src="img/telegram-icon.png" alt="рисунок Telegram"></a>
-                    <a href="https://discord.com/" class="logo5"><img src="img/discord-icon.png" alt="рисунок Discord"></a>
+                    <a href="https://web.whatsapp.com/" class="logo1">
+                        <img src="img/light/green/whatsap-icon.png" alt="рисунок WhatsApp"></a>
+                    <a href="https://vk.com" class="logo2">
+                        <img src="img/light/green//vk-icon.png" alt="рисунок VK"></a>
+                    <a href="https://www.viber.com/" class="logo3">
+                        <img src="img/light/green/viber-icon.png" alt="рисунок Viber"></a>
+                    <a href="https://web.telegram.org/k/" class="logo4">
+                        <img src="img/light/green/telegram-icon.png" alt="рисунок Telegram"></a>
+                    <a href="https://discord.com/" class="logo5">
+                        <img src="img/light/green/discord-icon.png" alt="рисунок Discord"></a>
                 </div>
             </div>
             <div class="year">
