--- a/doc.html
+++ b/doc.html
@@ -63,7 +63,7 @@
         </header>
         <content>
             <div class="content_doc">
-                <h3>Работа с документами</h3>
+                <h2>Работа с документами</h2>
                 <p>Введите запрос</p>
                 <input type="text">
                 <button>Поиск</button>
@@ -73,24 +73,37 @@
                 <textarea></textarea><br>
                 <button>Начать</button>
                 <p>Скаченные файлы вы можете либо соединить вместе, либо переместить весь текст в презентацию</p>
-                <div class="drag_drop">
-                    <div class="summ"><p>Слияние Word файлов</p></div>
-                    <div class="presentation"><p>Создание презентации из текста файла(ов)</p></div>
+                <div class="drag_drop-word">
+                    <div class="summ">
+                        <p>Слияние Word файлов</p>
+                    </div>
+                </div>
+                <div class="drag_drop-pres">
+                    <div class="presentation">
+                        <p>Создание презентации из текста файла(ов)</p>
+                    </div>
                 </div>
             </div>
         </content>
         <footer>
-            <div class="telephone">
-                <p>Телефон</p>
-                <a href="tel:">+7-923-666-23-45</a>
-            </div>
-            <div class="contacts">
-                <p class="contacts_text">Контакты</p>
-                <a href="https://web.whatsapp.com/" class="logo1"><img src="img/whatsap-icon.png" alt="рисунок WhatsApp"></a>
-                <a href="https://vk.com" class="logo2"><img src="img/vk-icon.png" alt="рисунок VK"></a>
-                <a href="https://www.viber.com/" class="logo3"><img src="img/viber-icon.png" alt="рисунок Viber"></a>
-                <a href="https://web.telegram.org/k/" class="logo4"><img src="img/telegram-icon.png" alt="рисунок Telegram"></a>
-                <a href="https://discord.com/" class="logo5"><img src="img/discord-icon.png" alt="рисунок Discord"></a>
+            <div class="call_me">
+                <div class="telephone">
+                    <p>Телефон</p>
+                    <a href="tel:">+7-923-666-23-45</a>
+                </div>
+                <div class="contacts">
+                    <p class="contacts_text">Контакты</p>
+                    <a href="https://web.whatsapp.com/" class="logo1">
+                        <img src="img/light/green/whatsap-icon.png" alt="рисунок WhatsApp"></a>
+                    <a href="https://vk.com" class="logo2">
+                        <img src="img/light/green//vk-icon.png" alt="рисунок VK"></a>
+                    <a href="https://www.viber.com/" class="logo3">
+                        <img src="img/light/green/viber-icon.png" alt="рисунок Viber"></a>
+                    <a href="https://web.telegram.org/k/" class="logo4">
+                        <img src="img/light/green/telegram-icon.png" alt="рисунок Telegram"></a>
+                    <a href="https://discord.com/" class="logo5">
+                        <img src="img/light/green/discord-icon.png" alt="рисунок Discord"></a>
+                </div>
             </div>
             <div class="year">
                 <p class="year_text">Study_Helper - 2023</p>
