--- a/into_text.html
+++ b/into_text.html
@@ -62,6 +62,9 @@
             </nav>
         </header>
         <content>
+            <div class="content_text-title">
+                <h2>Перевод в текст</h2><br>
+            </div>
             <div class="content_text">
                 <div class="text_image">
                     <div class="image_area">
@@ -80,17 +83,24 @@
             </div>
         </content>
         <footer>
-            <div class="telephone">
-                <p>Телефон</p>
-                <a href="tel:">+7-923-666-23-45</a>
-            </div>
-            <div class="contacts">
-                <p class="contacts_text">Контакты</p>
-                <a href="https://web.whatsapp.com/" class="logo1"><img src="img/whatsap-icon.png" alt="рисунок WhatsApp"></a>
-                <a href="https://vk.com" class="logo2"><img src="img/vk-icon.png" alt="рисунок VK"></a>
-                <a href="https://www.viber.com/" class="logo3"><img src="img/viber-icon.png" alt="рисунок Viber"></a>
-                <a href="https://web.telegram.org/k/" class="logo4"><img src="img/telegram-icon.png" alt="рисунок Telegram"></a>
-                <a href="https://discord.com/" class="logo5"><img src="img/discord-icon.png" alt="рисунок Discord"></a>
+            <div class="call_me">
+                <div class="telephone">
+                    <p>Телефон</p>
+                    <a href="tel:">+7-923-666-23-45</a>
+                </div>
+                <div class="contacts">
+                    <p class="contacts_text">Контакты</p>
+                    <a href="https://web.whatsapp.com/" class="logo1">
+                        <img src="img/light/green/whatsap-icon.png" alt="рисунок WhatsApp"></a>
+                    <a href="https://vk.com" class="logo2">
+                        <img src="img/light/green//vk-icon.png" alt="рисунок VK"></a>
+                    <a href="https://www.viber.com/" class="logo3">
+                        <img src="img/light/green/viber-icon.png" alt="рисунок Viber"></a>
+                    <a href="https://web.telegram.org/k/" class="logo4">
+                        <img src="img/light/green/telegram-icon.png" alt="рисунок Telegram"></a>
+                    <a href="https://discord.com/" class="logo5">
+                        <img src="img/light/green/discord-icon.png" alt="рисунок Discord"></a>
+                </div>
             </div>
             <div class="year">
                 <p class="year_text">Study_Helper - 2023</p>
