--- a/recom.html
+++ b/recom.html
@@ -30,10 +30,10 @@
                         <a href='into_text.html' class="transform_text">Перевод в текст</a>
                     </ol>
                     <ol class="timetable">
-                        <a href='#' class="timetable_text">Расписание</a>
+                        <a href='timetable.html' class="timetable_text">Расписание</a>
                     </ol>
                     <ol>
-                        <a href="recom.html" class="recom_text">Советы</a>
+                        <a href="#" class="recom_text">Советы</a>
                     </ol>
                     <ol class="sites">
                         <a href='#' class="sites_text">Сайты</a>
@@ -68,17 +68,24 @@
             </div>
         </content>
         <footer>
-            <div class="telephone">
-                <p>Телефон</p>
-                <a href="tel:">+7-923-666-23-45</a>
-            </div>
-            <div class="contacts">
-                <p class="contacts_text">Контакты</p>
-                <a href="https://web.whatsapp.com/" class="logo1"><img src="img/whatsap-icon.png" alt="рисунок WhatsApp"></a>
-                <a href="https://vk.com" class="logo2"><img src="img/vk-icon.png" alt="рисунок VK"></a>
-                <a href="https://www.viber.com/" class="logo3"><img src="img/viber-icon.png" alt="рисунок Viber"></a>
-                <a href="https://web.telegram.org/k/" class="logo4"><img src="img/telegram-icon.png" alt="рисунок Telegram"></a>
-                <a href="https://discord.com/" class="logo5"><img src="img/discord-icon.png" alt="рисунок Discord"></a>
+            <div class="call_me">
+                <div class="telephone">
+                    <p>Телефон</p>
+                    <a href="tel:">+7-923-666-23-45</a>
+                </div>
+                <div class="contacts">
+                    <p class="contacts_text">Контакты</p>
+                    <a href="https://web.whatsapp.com/" class="logo1">
+                        <img src="img/light/green/whatsap-icon.png" alt="рисунок WhatsApp"></a>
+                    <a href="https://vk.com" class="logo2">
+                        <img src="img/light/green//vk-icon.png" alt="рисунок VK"></a>
+                    <a href="https://www.viber.com/" class="logo3">
+                        <img src="img/light/green/viber-icon.png" alt="рисунок Viber"></a>
+                    <a href="https://web.telegram.org/k/" class="logo4">
+                        <img src="img/light/green/telegram-icon.png" alt="рисунок Telegram"></a>
+                    <a href="https://discord.com/" class="logo5">
+                        <img src="img/light/green/discord-icon.png" alt="рисунок Discord"></a>
+                </div>
             </div>
             <div class="year">
                 <p class="year_text">Study_Helper - 2023</p>
