--- a/settings.html
+++ b/settings.html
@@ -63,15 +63,14 @@
         </header>
         <content>
             <div class="content_settings">
-                <div class="settings_theme">
-
-                    <p>Тема: </p>
+                <h2>Настройки</h2>
+                    <p class="theme_title">Тема: </p>
                     <div class="theme">
                         <button class="dark"><div></div></button>
                         <button class="light"><div></div></button>
-                    </div>
+                    </div><br>
 
-                    <p>Цвет: </p>
+                    <p class="colors_title">Цвет: </p>
                     <div class="colors">
                         <button class="green">
                             <div class="green_color"></div></button>
@@ -96,21 +95,28 @@
 
                     <button>Сменить пароль</button><br>
                     <button class="quit">Выйти из аккаунта</button>
-                </div>
+                    <img src="img/door-logo.png" alt="Выход">
             </div>
         </content>
         <footer>
-            <div class="telephone">
-                <p>Телефон</p>
-                <a href="tel:">+7-923-666-23-45</a>
-            </div>
-            <div class="contacts">
-                <p class="contacts_text">Контакты</p>
-                <a href="https://web.whatsapp.com/" class="logo1"><img src="img/whatsap-icon.png" alt="рисунок WhatsApp"></a>
-                <a href="https://vk.com" class="logo2"><img src="img/vk-icon.png" alt="рисунок VK"></a>
-                <a href="https://www.viber.com/" class="logo3"><img src="img/viber-icon.png" alt="рисунок Viber"></a>
-                <a href="https://web.telegram.org/k/" class="logo4"><img src="img/telegram-icon.png" alt="рисунок Telegram"></a>
-                <a href="https://discord.com/" class="logo5"><img src="img/discord-icon.png" alt="рисунок Discord"></a>
+            <div class="call_me">
+                <div class="telephone">
+                    <p>Телефон</p>
+                    <a href="tel:">+7-923-666-23-45</a>
+                </div>
+                <div class="contacts">
+                    <p class="contacts_text">Контакты</p>
+                    <a href="https://web.whatsapp.com/" class="logo1">
+                        <img src="img/light/green/whatsap-icon.png" alt="рисунок WhatsApp"></a>
+                    <a href="https://vk.com" class="logo2">
+                        <img src="img/light/green//vk-icon.png" alt="рисунок VK"></a>
+                    <a href="https://www.viber.com/" class="logo3">
+                        <img src="img/light/green/viber-icon.png" alt="рисунок Viber"></a>
+                    <a href="https://web.telegram.org/k/" class="logo4">
+                        <img src="img/light/green/telegram-icon.png" alt="рисунок Telegram"></a>
+                    <a href="https://discord.com/" class="logo5">
+                        <img src="img/light/green/discord-icon.png" alt="рисунок Discord"></a>
+                </div>
             </div>
             <div class="year">
                 <p class="year_text">Study_Helper - 2023</p>
