--- a/timetable.html
+++ b/timetable.html
@@ -63,10 +63,11 @@
         </header>
         <content>
             <div class="content_timetable">
-                <h1>Расписание</h1>
-                <a href=""><img src="img/save-icon.png" alt="Иконка сохранения" class="timetable_save"></a>
-                <a href=""><img src="img/left.png" alt="Стрелка налево" class="timetable_right"></a>
-                <a href=""><img src="img/right.png" alt="Стрелка направо" class="timetable_left"></a>
+                <h2>Расписание</h2>
+                <hr>
+                <button href="#" class="save"><img src="img/light/green/save-icon.png" alt="Иконка сохранения" class="timetable_save"></button>
+                <button href="#" class="right_side"><img src="img/light/green/left.png" alt="Стрелка налево" class="timetable_right"></button>
+                <button href="#" class="left_side"><img src="img/light/green/right.png" alt="Стрелка направо" class="timetable_left"></button>
                 <hr>
                 <h3>Месяц Число</h3>
                 <p class="error">Неверно записаны данные. Внимательно прочитайте инструкцию.</p>
@@ -75,8 +76,6 @@
                     <div class="timetable_week">
                         <p>ПН</p><p>ВТ</p><p>СР</p><p>ЧТ</p>
                         <p>ПТ</p><p>СБ</p><p>ВС</p>
-                    </div>
-                    <div class="timetable_number">
                         <p>1</p><p>2</p><p>3</p><p>4</p>
                         <p>5</p><p>6</p><p>7</p>
                    </div>
@@ -117,17 +116,24 @@
             </div>
         </content>
         <footer>
-            <div class="telephone">
-                <p>Телефон</p>
-                <a href="tel:">+7-923-666-23-45</a>
-            </div>
-            <div class="contacts">
-                <p class="contacts_text">Контакты</p>
-                <a href="https://web.whatsapp.com/" class="logo1"><img src="img/whatsap-icon.png" alt="рисунок WhatsApp"></a>
-                <a href="https://vk.com" class="logo2"><img src="img/vk-icon.png" alt="рисунок VK"></a>
-                <a href="https://www.viber.com/" class="logo3"><img src="img/viber-icon.png" alt="рисунок Viber"></a>
-                <a href="https://web.telegram.org/k/" class="logo4"><img src="img/telegram-icon.png" alt="рисунок Telegram"></a>
-                <a href="https://discord.com/" class="logo5"><img src="img/discord-icon.png" alt="рисунок Discord"></a>
+            <div class="call_me">
+                <div class="telephone">
+                    <p>Телефон</p>
+                    <a href="tel:">+7-923-666-23-45</a>
+                </div>
+                <div class="contacts">
+                    <p class="contacts_text">Контакты</p>
+                    <a href="https://web.whatsapp.com/" class="logo1">
+                        <img src="img/light/green/whatsap-icon.png" alt="рисунок WhatsApp"></a>
+                    <a href="https://vk.com" class="logo2">
+                        <img src="img/light/green//vk-icon.png" alt="рисунок VK"></a>
+                    <a href="https://www.viber.com/" class="logo3">
+                        <img src="img/light/green/viber-icon.png" alt="рисунок Viber"></a>
+                    <a href="https://web.telegram.org/k/" class="logo4">
+                        <img src="img/light/green/telegram-icon.png" alt="рисунок Telegram"></a>
+                    <a href="https://discord.com/" class="logo5">
+                        <img src="img/light/green/discord-icon.png" alt="рисунок Discord"></a>
+                </div>
             </div>
             <div class="year">
                 <p class="year_text">Study_Helper - 2023</p>
