--- a/settings.html
+++ b/settings.html
@@ -92,7 +92,7 @@
 
                     <button>Сменить пароль</button><br>
                     <button class="quit">Выйти из аккаунта</button>
-                    <img src="img/door-logo.png" alt="Выход">
+                    <img src="{{ url_for('static', filename='styles/img/door-logo.png') }}" alt="Выход">
             </div>
         </content>
         <footer>
